# langparse

./: .gitignore  LICENSE  README.md  README_cn.md  pyproject.toml
.github/workflows/: pypi-publish.yml
docs/: CODE_REVIEW.md  INSTALL_TEST.md  PROGRESS.md
examples/: advanced_page_tracking.py  basic_usage.py  office_formats.py  verify_install.py
langparse/: __init__.py  autoparser.py  config.py  types.py
tests/: conftest.py  test_autoparser.py  test_chunker.py  test_parsers.py  test_pdf_parser.py
