[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langparse"
version = "0.0.1"
description = "LangParse is a universal document parsing and text chunking engine for LLM or agent applications — Documents In, Knowledge Out."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]

authors = [
    { name = "syw2014", email = "syw2014@gmail.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Linguistic",
]

keywords = ["llm", "rag", "parsing", "chunking", "agent", "document-parsing"]

dependencies = [
    "loguru>=0.7.3",
]

[project.urls]
Homepage = "https://github.com/syw2014/langparse"
Repository = "https://github.com/syw2014/langparse"
Issues = "https://github.com/syw2014/langparse/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["langparse*"]
